# researchsquid

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/: config.py
backend/src/agents/: controller.py  squid.py
backend/src/api/: service.py
backend/src/ingest/: summarizer.py
backend/src/llm/: client.py  pricing.py  prompts.py
backend/src/memory/: __init__.py  hindsight_client.py  server.py
backend/src/models/: experiment.py
backend/src/orchestration/: convergence.py  debate_cycle.py  evidence.py  institute_graph.py
backend/src/rag/: indexer.py  retriever.py  store.py
backend/src/search/: arxiv.py
benchmarks/draco/: dataset_info.md  evaluate.py  judge.py  reporting.py
coordinator/: Dockerfile
docs/: adding-a-backend.md  adding-an-mcp-tool.md  architecture-v0.2.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AgentInspector.vue  AgentPanel.vue  BudgetBar.vue  DebatePanel.vue  EventLog.vue  ExperimentPanel.vue  ReportPanel.vue  StatusPanel.vue  WorkflowSteps.vue
frontend/src/store/: session.js
frontend/src/views/: Home.vue  SessionView.vue
hive/: __init__.py
hive/agents/: __init__.py  persona.py
hive/coordinator/: __init__.py  app.py  audit.py  report_agent.py  telemetry.py
hive/dag/: __init__.py  persona_store.py  reader.py  writer.py
hive/schema/: session.py
hive/utils/: llm_client.py  mock_llm.py
scripts/: setup.sh
squid/agents/: persona.py
squid/coordinator/: app.py
squid/dag/: persona_store.py
tests/: test_e2e.py
workers/: Dockerfile
